--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,6 +18,7 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BikeCollector</a></li>
         </ul>
         <ul class="right">
+          <li><a href="{% url 'bike_create' %}">New Bike</a></li>
           <li><a href="{% url 'index' %}">My Bikes</a></li>
         </ul>
       </div>
