--- a/main_app/templates/bikes/detail.html
+++ b/main_app/templates/bikes/detail.html
@@ -11,6 +11,10 @@
         <p>Terrain: {{ bike.terrain_type }}</p>
       </div>
   </div>
+  <div class="card-action">
+    <a class="btn" href="{% url 'bike_update' bike.id %}">Edit</a>
+    <a class="btn" href="{% url 'bike_delete' bike.id %}">Delete</a>
+  </div>
 </div>
 
 {% endblock %}
