--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,6 +9,7 @@
   <title>Bike Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
@@ -18,6 +19,8 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BikeCollector</a></li>
         </ul>
         <ul class="right">
+          <li><a href="{% url 'equipment_create' %}">Add Equipment</a></li>
+          <li><a href="{% url 'equipment_index' %}">View Equipment</a></li>
           <li><a href="{% url 'bike_create' %}">New Bike</a></li>
           <li><a href="{% url 'index' %}">My Bikes</a></li>
         </ul>
